# kairos-stats-lean

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Kairos.lean  Pythia.lean  README.md  ROADMAP.md  SECURITY.md  aristotle-medium-queue.md  lake-manifest.json  lakefile.lean  pyproject.toml
.githooks/: pre-push
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  new_theorem.md
.github/scripts/: check-stale-imports.sh
.github/workflows/: actionlint.yml  aristotle-restock.yml  dep-graph-refresh.yml  lean-build.yml  md-lint.yml  mutation-tests.yml  pr-template-check.yml  pythia-sim.yml
Kairos/Stats/: AristotleTargetACS.lean  AsymptoticSharpness.lean  Basic.lean  Bernstein.lean  BettingCS.lean  BettingStrategy.lean  DeploymentDesign.lean  EDetector.lean  ElegantUnification.lean  EquivalenceBreak.lean  GaussianRandomWalk.lean  GaussianSmallBall.lean  HowardRamdasCS.lean  InputQuantization.lean  MatchingConstants.lean  NewTargetsStubs.lean  PACBayesCS.lean  PhiTransform.lean  PowerAnalysis.lean  Quantization.lean  SPRT.lean  Sharpness.lean  StoppingRule.lean  SubGamma.lean  SubGaussianMG.lean  TimeUniformCLT.lean  VectorSharpness.lean  VilleSupermartingale.lean  WaldIdentity.lean
Pythia/: Actuarial.lean  AsymptoticSharpness.lean  AxiomAudit.lean  Basic.lean  BenchTargets.lean  Bennett.lean  Bernstein.lean  Bio.lean  Concentration.lean  Distributed.lean  EDetector.lean  EquivalenceBreak.lean  FreedmanMaximal.lean  GaussianRandomWalk.lean  Hardware.lean  HypothesisTest.lean  InformationTheory.lean  LanguageSemantics.lean  Lookup.lean  MGFBoundedSubGamma.lean  MasterLowerBound.lean  MathlibTags.lean  MatrixBernstein.lean  MatrixBernsteinFull.lean  MatrixLieb.lean  MechanismDesign.lean  Networking.lean  Numerical.lean  PowerAnalysis.lean  SPRT.lean  SparreAndersen.lean  TimeUniformCLT.lean  VilleSupermartingale.lean
Pythia/Actuarial/: BornhuetterFerguson.lean  CramerLundberg.lean  LogNormal.lean  LogNormalMean.lean  Pareto.lean  Test.lean
Pythia/Asymptotics/: DeltaMethodMulti.lean  DeltaMethodScalar.lean  Slutsky.lean
Pythia/Bench/: MiniPythia.lean  README.md
Pythia/Bio/: MassAction.lean  PKPD.lean  Phylogenetics.lean  PopGenetics.lean  RCT.lean  SEIR.lean
Pythia/Chemistry/: HendersonHasselbalch.lean
Pythia/ClinicalTrials/: MultiArmCS.lean  Pocock.lean  Stratified.lean
Pythia/Concentration/: Cantelli.lean  Reliability.lean
Pythia/Control/: LyapunovDiscrete.lean
Pythia/Distributed/: Lamport.lean  PaxosCorollaries.lean  TwoPhaseCommit.lean
Pythia/Economics/: CobbDouglas.lean  Walras.lean
Pythia/Engineering/: RCTimeConstant.lean  SignalEnergy.lean
Pythia/Epidemiology/: HerdImmunity.lean
Pythia/Finance/: All.lean  AlmgrenChrissExecution.lean  AlmgrenChrissOptimal.lean  AnnuityFactor.lean  BachelierTerminal.lean  BetaFromCorrelation.lean  BlackFuturesOption.lean  BlackScholes.lean  BlackScholesIntrinsicLower.lean  BootstrapYieldCurve.lean  CAPMBeta.lean  CRRBinomialStep.lean  CallPriceBounds.lean  CallPriceUpperBound.lean  CointegrationResidual.lean  CompoundInterest.lean  ContinuousDividendForward.lean  ConvexityDuration.lean  CreditDefaultSwap.lean  CreditRisk.lean  CreditSpread.lean  DiscountFactor.lean  (+43 more)
crates/: PROOF_AUDIT.md
crates/pythia-execution-schedule/: Cargo.toml
crates/pythia-execution-schedule/src/: lib.rs
crates/pythia-execution-schedule/tests/: proptest_lean.rs
crates/pythia-fixedincome-yield/: Cargo.toml
crates/pythia-fixedincome-yield/src/: lib.rs
crates/pythia-fixedincome-yield/tests/: proptest_lean.rs
crates/pythia-hft-fixedpoint-strong/: Cargo.toml
crates/pythia-hft-fixedpoint-strong/benches/: fp_strong_bench.rs
crates/pythia-hft-fixedpoint-strong/src/: lib.rs
crates/pythia-hft-fixedpoint-strong/tests/: proptest_lean.rs
crates/pythia-hft-latency/: Cargo.toml
crates/pythia-hft-latency/benches/: latency_bench.rs
crates/pythia-hft-latency/src/: lib.rs
crates/pythia-hft-latency/tests/: proptest_lean.rs
crates/pythia-hft-orderbook/: Cargo.toml
crates/pythia-hft-orderbook/benches/: orderbook_bench.rs
crates/pythia-hft-orderbook/src/: lib.rs
crates/pythia-hft-orderbook/tests/: proptest_lean_theorems.rs
crates/pythia-hft-riskgate/: Cargo.toml
crates/pythia-hft-riskgate/benches/: riskgate_bench.rs
crates/pythia-hft-riskgate/src/: lib.rs
crates/pythia-hft-riskgate/tests/: proptest_lean_theorems.rs
crates/pythia-options-call-bounds/: Cargo.toml
crates/pythia-options-call-bounds/src/: lib.rs
crates/pythia-options-call-bounds/tests/: proptest_lean.rs
crates/pythia-options-lookback/: Cargo.toml
crates/pythia-options-lookback/src/: lib.rs
crates/pythia-options-lookback/tests/: proptest_lean.rs
crates/pythia-options-time-premium/: Cargo.toml
crates/pythia-options-time-premium/src/: lib.rs
crates/pythia-options-time-premium/tests/: proptest_lean.rs
crates/pythia-portfolio-efficient-frontier/: Cargo.toml
crates/pythia-portfolio-efficient-frontier/src/: lib.rs
crates/pythia-portfolio-efficient-frontier/tests/: proptest_lean.rs
crates/pythia-portfolio-markowitz/: Cargo.toml
crates/pythia-portfolio-markowitz/src/: lib.rs
crates/pythia-risk-marginmodel/: Cargo.toml
crates/pythia-risk-marginmodel/src/: lib.rs
crates/pythia-risk-marginmodel/tests/: proptest_lean.rs
crates/pythia-risk-tracking/: Cargo.toml
crates/pythia-risk-tracking/src/: lib.rs
crates/pythia-risk-tracking/tests/: proptest_lean.rs
demo/: README.md  aesop_integration.lean
docs/: ci.md  concentration_cookbook.md  dep_graph.md  lean_lsp_mcp_setup.md  llm_defense.md  pythia_bang.md  reflective_oracles.md  sledgehammer_dispatch.md  stat_simp.md  tutorial.md
examples/: 04_pythia_full_dispatch.lean  05_tight_tail_calculator.lean  08_pythia_machine_format.lean  README.md
tools/: README.md  add_theorem.py  aristotle_import.py  aristotle_queue.py  check_pr_body.py  check_pythia_umbrella.py  check_readme_numbers.py  dep_graph.py  lean_race_guide.py  md_lint.py  pre-push.sh  refresh_readme_stats.py  run_pythia_sim.py  test_check_readme_numbers.py  theorem_index.py
(+670 files in other folders)
